Fixed layout issues

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,10 @@ button {
       margin: 0 !important;
 }
 
+#kernel-weight-label {
+      margin-top: 0;
+}
+
 header {
       height: 10%;
       padding: 1% 2%;
@@ -68,7 +72,7 @@ input#load-image-upload {
       margin-bottom: 4%;
 }
 
-.inline-block * {
+.inline-block {
       display: inline-block;
 }
 
@@ -78,6 +82,7 @@ input#load-image-upload {
 
 #kernel-vis {
       width: 50%;
+      float: left;
 }
 
 #kernel-vis .row {
